--- a/surrogate_models/surrogate_model.ipynb
+++ b/surrogate_models/surrogate_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7b611eb",
+   "id": "f2aae0fa",
    "metadata": {},
    "source": [
     "###### last update: April 5, 2022\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "id": "9fa32aeb",
+   "id": "043914a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1416f67",
+   "id": "43d518ae",
    "metadata": {},
    "source": [
     "## Data Exploration"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "cdc14df5",
+   "id": "edc3e266",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38023020",
+   "id": "b98cd4b8",
    "metadata": {},
    "source": [
     "### Distribution of X1 and X2"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "7507fd50",
+   "id": "6fcaed52",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13463d3a",
+   "id": "9867d248",
    "metadata": {},
    "source": [
     "The distribution X1 and X2 is uniform."
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc31a5f",
+   "id": "dd909fda",
    "metadata": {},
    "source": [
     "### Distribution of Target Values"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "2647abe3",
+   "id": "772715fa",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e0b1d6",
+   "id": "d7eea67d",
    "metadata": {},
    "source": [
     "Target variable distribution is positively skewed with an arithmetic mean greater than the median (p50): "
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "c437f1ab",
+   "id": "2c2ed924",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696ccced",
+   "id": "5c2bec6b",
    "metadata": {},
    "source": [
     "### Pandas Profile Report"
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "a55f92d4",
+   "id": "af5a4e2d",
    "metadata": {},
    "outputs": [
     {
@@ -6307,7 +6307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580d6fb6",
+   "id": "12d29bfe",
    "metadata": {},
    "source": [
     "## Clean Data\n",
@@ -6380,7 +6380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20506bfd",
+   "id": "c22129e8",
    "metadata": {},
    "source": [
     "### Create New Target Categorical variables\n",
@@ -6394,7 +6394,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "e2622400",
+   "id": "776b78fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6406,7 +6406,7 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "id": "470cd85a",
+   "id": "cac95194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6420,7 +6420,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "b462580c",
+   "id": "4c1e54f8",
    "metadata": {},
    "outputs": [
     {
@@ -6441,7 +6441,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "26bcd5a9",
+   "id": "be55553b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6458,7 +6458,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "ede338a0",
+   "id": "0e5d4326",
    "metadata": {},
    "outputs": [
     {
@@ -6485,7 +6485,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "5aee98bc",
+   "id": "45affd19",
    "metadata": {},
    "outputs": [
     {
@@ -6552,7 +6552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b7f1e7",
+   "id": "6d4770f1",
    "metadata": {},
    "source": [
     "### Distribution of target categorical variables"
@@ -6561,7 +6561,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "9866f62f",
+   "id": "d59e1698",
    "metadata": {},
    "outputs": [
     {
@@ -6706,7 +6706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90588f7c",
+   "id": "afec0a4e",
    "metadata": {},
    "source": [
     "## Normalize Data\n",
@@ -6716,12 +6716,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
-   "id": "f302e78b",
+   "execution_count": 520,
+   "id": "ee1d821b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = preprocessing.StandardScaler()\n",
+    "#scaler=preprocessing.StandardScaler() # if the variables have normal distribution, then they should be standardized\n",
+    "scalar = preprocessing.MinMaxScaler() # the variables have uniform distribution, so we normalize the variables instead\n",
     "X_train_norm = pd.DataFrame(scaler.fit_transform(X_train))\n",
     "X_test_norm = pd.DataFrame(scaler.transform(X_test))"
    ]
@@ -6729,7 +6730,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "id": "467fdd5f",
+   "id": "9b64ef04",
    "metadata": {},
    "outputs": [
     {
@@ -6826,7 +6827,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "ea606ff9",
+   "id": "327a9aaa",
    "metadata": {},
    "outputs": [
     {
@@ -6922,8 +6923,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
-   "id": "caf3ad63",
+   "execution_count": 521,
+   "id": "cea2613e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6952,7 +6953,7 @@
     "           test_C1/test_C2))\n",
     "    cols = X.columns\n",
     "    if std_cols:\n",
-    "        std = preprocessing.StandardScaler()\n",
+    "        std = preprocessing.MinMaxScaler() # StandardScaler()\n",
     "        X_train.loc[:, std_cols] = std.fit_transform(X_train[std_cols])\n",
     "        X_test.loc[:, std_cols] = std.transform(X_test[std_cols])\n",
     "    \n",
@@ -6967,8 +6968,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
-   "id": "8e240e4d",
+   "execution_count": 522,
+   "id": "323136b3",
    "metadata": {},
    "outputs": [
     {
@@ -7035,7 +7036,7 @@
        " Name: y, Length: 480, dtype: object)"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 522,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7046,8 +7047,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
-   "id": "0b08b0f1",
+   "execution_count": 523,
+   "id": "725d9373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7059,8 +7060,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
-   "id": "ae6f5584",
+   "execution_count": 524,
+   "id": "c28d094c",
    "metadata": {},
    "outputs": [
     {
@@ -7080,7 +7081,7 @@
        "Name: y, Length: 1600, dtype: object"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 524,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7091,8 +7092,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
-   "id": "5b4aea85",
+   "execution_count": 525,
+   "id": "e272574a",
    "metadata": {},
    "outputs": [
     {
@@ -7109,8 +7110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
-   "id": "4f5dd26e",
+   "execution_count": 526,
+   "id": "ba006842",
    "metadata": {},
    "outputs": [
     {
@@ -7127,7 +7128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96b739a",
+   "id": "7cbf19e9",
    "metadata": {},
    "source": [
     "## Baseline Model\n",
@@ -7137,8 +7138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
-   "id": "8c9905ff",
+   "execution_count": 530,
+   "id": "2bf76a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7154,8 +7155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
-   "id": "6e5bee04",
+   "execution_count": 531,
+   "id": "893079cb",
    "metadata": {},
    "outputs": [
     {
@@ -7172,7 +7173,7 @@
        "93.75"
       ]
      },
-     "execution_count": 495,
+     "execution_count": 531,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7186,7 +7187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac965aa6",
+   "id": "9bcc499f",
    "metadata": {},
    "source": [
     "Note that Case0 (with 2 classes) results in a 93.75% accuracy. This case highlights the issue with using accuracy as a metric for imbalanced datasets. There are 1501 cases of C1 and 98 cases of C2. "
@@ -7194,8 +7195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
-   "id": "bfaefe13",
+   "execution_count": 532,
+   "id": "68ddb8ef",
    "metadata": {},
    "outputs": [
     {
@@ -7204,7 +7205,7 @@
        "0.938125"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7216,7 +7217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "188dd9fd",
+   "id": "3f4b6281",
    "metadata": {},
    "source": [
     "## Various Models\n",
@@ -7226,8 +7227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
-   "id": "7a3852f1",
+   "execution_count": 533,
+   "id": "62338d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7245,8 +7246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
-   "id": "25d50962",
+   "execution_count": 534,
+   "id": "2db9b9bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7261,6 +7262,14 @@
     "# We need to use a version of k-fold cross-validation that preserves the imbalanced class distribution in each fold.\n",
     "# It is called stratified k-fold cross-validation and will enforce the class distribution in each split of the data\n",
     "# to match the distribution in the complete training dataset\n",
+    "\n",
+    "# Stratified sampling: Split the dataset in such a way that we preserve the imbalanced class distribution in each\n",
+    "# fold\n",
+    "# The target variable (y), the class is used to control the sampling process\n",
+    "\n",
+    "# So we use the stratified version of k-fold cross-validation that preserves class distribution in each fold, and \n",
+    "# this will enforce the class distribution in each split of the data to  match the distribution in the complete\n",
+    "# training dataset\n",
     "\n",
     "def summarize_distribution(kfold, X, y):\n",
     "    X = X.values\n",
@@ -7289,31 +7298,23 @@
     "        print(f\"{model.__name__:22} AUC: \"\n",
     "              f\"{s.mean():.3f} STD: {s.std():.2f}\")\n",
     "        \n",
-    "def run_cases():\n",
-    "    all_data = [(X_train0, X_test0, y_train0, y_test0),\n",
-    "                #(X_train1, X_test1, y_train1, y_test1),\n",
-    "                #(X_train2, X_test2, y_train2, y_test2),\n",
-    "                #(###X_train3, X_test3, y_train3, y_test3),\n",
-    "            ]\n",
-    "    id = 0\n",
-    "    \n",
+    "def run_cases():    \n",
     "    print(f'Case={id}')\n",
-    "    run_multiple_models(*get_train_test_X_y(add_categorical_target(data, y_case0),'y'))\n",
-    "    id += 1\n",
+    "    run_multiple_models(*get_train_test_X_y(add_categorical_target(data, y_case0),'y'))    \n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
-   "id": "fd780cc8",
+   "execution_count": 535,
+   "id": "195135ab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Case=0\n",
+      "Case=1599\n",
       "Train-Test With Stratify: Train: C1=1051, C2=69, C1/C2=15, Test: C1=450, C2=30, C1/C2=15\n",
       ">Train: #C1=1350, #C2=90, Test: #C1=151, #C2=9\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
@@ -7347,7 +7348,7 @@
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
-      "DecisionTreeClassifier AUC: 0.850 STD: 0.08\n",
+      "DecisionTreeClassifier AUC: 0.855 STD: 0.09\n",
       ">Train: #C1=1350, #C2=90, Test: #C1=151, #C2=9\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
@@ -7391,7 +7392,7 @@
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
-      "RandomForestClassifier AUC: 0.975 STD: 0.02\n",
+      "RandomForestClassifier AUC: 0.979 STD: 0.02\n",
       ">Train: #C1=1350, #C2=90, Test: #C1=151, #C2=9\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
       ">Train: #C1=1351, #C2=89, Test: #C1=150, #C2=10\n",
@@ -7412,33 +7413,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 517,
-   "id": "947d6ba1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">Train: 0=495, 1=5, Test: 0=495, 1=5\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "79370fed",
+   "id": "819999fe",
    "metadata": {},
    "source": [
-    "## Stacking models"
+    "## Stacking models\n",
+    "A stacking classifier takes other models and users their output to predict a target or label. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "id": "1f936b10",
+   "execution_count": 537,
+   "id": "e2db3a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlxtend.classifier import (StackingClassifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
+   "id": "d2ff19a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clfs = [x() for x in [LogisticRegression, DecisionTreeClassifier, KNeighborsClassifier, GaussianNB, SVC, RandomForestClassifier]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 550,
+   "id": "f1737bec",
    "metadata": {},
    "outputs": [
     {
@@ -7462,89 +7468,116 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>X1</th>\n",
-       "      <th>X2</th>\n",
-       "      <th>y</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1600.000000</td>\n",
-       "      <td>1600.000000</td>\n",
-       "      <td>1600.000000</td>\n",
+       "      <td>1600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>20.500000</td>\n",
-       "      <td>20.500000</td>\n",
-       "      <td>67.597641</td>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>11.547005</td>\n",
-       "      <td>11.547005</td>\n",
-       "      <td>41.090698</td>\n",
+       "      <th>top</th>\n",
+       "      <td>C1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>7.098637</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>10.750000</td>\n",
-       "      <td>10.750000</td>\n",
-       "      <td>37.517150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>20.500000</td>\n",
-       "      <td>20.500000</td>\n",
-       "      <td>57.329263</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>30.250000</td>\n",
-       "      <td>30.250000</td>\n",
-       "      <td>92.644693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>266.181500</td>\n",
+       "      <th>freq</th>\n",
+       "      <td>1501</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                X1           X2            y\n",
-       "count  1600.000000  1600.000000  1600.000000\n",
-       "mean     20.500000    20.500000    67.597641\n",
-       "std      11.547005    11.547005    41.090698\n",
-       "min       1.000000     1.000000     7.098637\n",
-       "25%      10.750000    10.750000    37.517150\n",
-       "50%      20.500000    20.500000    57.329263\n",
-       "75%      30.250000    30.250000    92.644693\n",
-       "max      40.000000    40.000000   266.181500"
+       "           0\n",
+       "count   1600\n",
+       "unique     2\n",
+       "top       C1\n",
+       "freq    1501"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 550,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.describe()"
+    "y_case0.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 552,
+   "id": "3b94fcc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "311     C1\n",
+       "372     C1\n",
+       "1317    C1\n",
+       "1578    C1\n",
+       "583     C1\n",
+       "        ..\n",
+       "1301    C1\n",
+       "980     C1\n",
+       "423     C1\n",
+       "534     C1\n",
+       "558     C1\n",
+       "Name: y, Length: 1120, dtype: object"
+      ]
+     },
+     "execution_count": 552,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 555,
+   "id": "72f635b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XX = pd.concat([X_train, X_test])\n",
+    "yy  = pd.concat([y_train, y_test])\n",
+    "stack = StackingClassifier(classifiers=clfs, meta_classifier=LogisticRegression())\n",
+    "kfold = model_selection.StratifiedKFold(n_splits=10, random_state=42, shuffle=True)\n",
+    "s = model_selection.cross_val_score(stack, XX, yy, scoring=\"roc_auc\", cv=kfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 556,
+   "id": "b2ebb4ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StackingClassifier AUC: nan STD: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{stack.__class__.__name__} \"\n",
+    "      f\"AUC: {s.mean():.3f} STD: {s.std():.2f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "04e6552d",
+   "id": "5c2ab041",
    "metadata": {},
    "outputs": [
     {
@@ -7566,7 +7599,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "d32276c3",
+   "id": "dc90a9ff",
    "metadata": {},
    "outputs": [
     {
@@ -7599,7 +7632,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "id": "6b0685f8",
+   "id": "ff3aeaaf",
    "metadata": {},
    "outputs": [
     {
@@ -7628,7 +7661,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "id": "f890a751",
+   "id": "316c47ad",
    "metadata": {},
    "outputs": [
     {
@@ -7650,7 +7683,7 @@
   {
    "cell_type": "code",
    "execution_count": 439,
-   "id": "ef0c8c42",
+   "id": "0aa29cdb",
    "metadata": {},
    "outputs": [
     {
@@ -7780,7 +7813,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "33ed9929",
+   "id": "73f1c14f",
    "metadata": {},
    "outputs": [
     {
@@ -7812,7 +7845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e6fbd9",
+   "id": "3f76b00b",
    "metadata": {},
    "outputs": [],
    "source": []
